Fix CSS alignment of multiple elements

--- a/src/app.css
+++ b/src/app.css
@@ -128,6 +128,7 @@ footer {
   font-size: var(--main-font-size);
   margin-top: 30px;
   padding-left: 16px;
+  padding-right: 16px;
 }
 
 .blog-date {
@@ -136,6 +137,26 @@ footer {
 
 .animation-text {
   text-align: center;
+}
+
+.blog-list {
+  padding: 16px;
+  padding-inline-start: 32px;
+  width: calc(100% - 48px);
+  justify-content: flex-end;
+}
+
+.animation-text-container {
+  display: flex;
+  justify-content: center;
+}
+
+.animation-text {
+  padding: 0;
+}
+
+.blog-filler {
+  padding-bottom: 160px;
 }
 
 @media (max-width: 700px) {
